--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.5.0",
+    "langfuse": "^3.35.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
