chore: add release it

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "mcp-server-langfuse",
+  "name": "langfuse-mcp-server",
   "version": "0.0.1",
   "description": "A MCP Server for Langfuse Prompt Management",
   "main": "index.js",
   "type": "module",
   "bin": {
-    "mcp-server-langfuse": "./build/index.js"
+    "langfuse-mcp-server": "./build/index.js"
   },
   "scripts": {
     "build": "tsc && node -e \"require('fs').chmodSync('build/index.js', '755')\""
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.13.4",
+    "release-it": "^18.1.2",
     "typescript": "^5.7.3"
   },
   "repository": {
@@ -33,5 +34,26 @@
     "management"
   ],
   "author": "marcklingen",
-  "license": "MIT"
+  "license": "MIT",
+  "release-it": {
+    "hooks": {
+      "before:release": "npm run build"
+    },
+    "git": {
+      "commitMessage": "chore: release v${version}",
+      "tagName": "v${version}",
+      "commitArgs": [
+        "--no-verify"
+      ],
+      "pushArgs": [
+        "--no-verify"
+      ]
+    },
+    "github": {
+      "release": true,
+      "web": true,
+      "autoGenerate": true,
+      "releaseName": "v${version}"
+    }
+  }
 }
