chore: release v0.0.2-rc.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "langfuse-mcp-server",
-  "version": "0.0.1",
+  "version": "0.0.2-rc.0",
   "description": "A MCP Server for Langfuse Prompt Management",
   "main": "index.js",
   "type": "module",
